# betterjet

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  typeshare.toml  vite.config.ts
src/: App.tsx  commands.ts  main.tsx  postcss.config.js  queries.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  proto.rs  state.rs
src/components/: BluetoothAdapterSelect.tsx  DeviceList.tsx  FanSlider.module.css  FanSlider.tsx  IconLabel.tsx  ModeControl.tsx  TempSlider.module.css  TempSlider.tsx
src/context/: HashContext.tsx
src/hooks/: index.ts  useEMA.ts  useSetTemp.ts
