[package]
name = "betterjet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"
serde_with = "3.3.0"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
btleplug = { version = "0.11", features = ["serde"] }
tokio = "1.36.0"
thiserror = "1.0"
typeshare = "1.0"
num-derive = "0.4"
num-traits = "0.2"
futures = "0.3"
uuid = "1.4"
log = "0.4.20"
sled = "0.34.7"
directories = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
